# libcurl-demo

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/libcurldemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/libcurldemo/: MainActivity.java
app/src/main/native-code/: demo.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/libcurldemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
